Aide Memoire Complet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,6 +197,10 @@
         "\n\n\n<b><u>Call out et fermeture</u></b>\n"
         "\nIntranet de CPU comme pour le Call In"
         "\n\nMcDonald ne pas oublier de le faire dans Road Warrior également"
+        "\n\n\n<b><u>Varia</u></b>\n"
+        "\nPour call Tim Hortons sur les TV de menu"
+        "\nEn arrivant sur site, envoyer un email de call in a contentteam@sicom.com"
+        "\nInclure le numero du restaurant, votre nom et votre # de cellulaire, ensuite le support vous contactera (en anglais)"
         "\n\n\n\n\n\n\n\n\n"
     </string>
     <string name="aidememoireCompucom">
@@ -207,6 +211,7 @@
         "\nPendant les heures de bureau, appeler le dispatch Bureautech."
         "\nN.B. : On n’en fait pas pour ce sous-traitant le soir et les fins de semaine."
         "\n\n\n<b><u>Support</u></b>\n"
+        "\n418-877-5182 ou 1-800-268-4861 ext #2"
         "\nYves Baillargeon = 1-800-268-4867 poste 78820  / EN dehors des heures de bureau = 1-800-668-6574"
         "\nShell = 1-416-456-5710"
         "\n\n\n<b><u>Call out et fermeture</u></b>\n"
@@ -252,12 +257,17 @@
         "\nCorinne Malette = 1-514-386-1663 Extension = 7501"
         "\nSupport TD = 1-800-727-1504"
         "\nPour swap Tim Hortons = 1-800-265-5158"
+        "\nÉcran menu Tim Hortons = Sicom = 1-866-846-7696"
         "\nChase Paymentech technical support: 1-800-265-5158"
         "\nFirst Data Technical Support: 1-800-430-3516 Option 1"
         "\n\n\n<b><u>Call out et fermeture</u></b>\n"
         "\nPar courriel au maxdispatch@maxwellpaper.ca"
         "\n\n\n<b><u>Commande de pièces</u></b>"
         "\nAppelez Stéphane au 1-877-661-6393."
+        "\n\n\n<b><u>Varia</u></b>\n"
+        "\nPour call Tim Hortons sur les TV de menu"
+        "\nEn arrivant sur site, envoyer un email de call in a contentteam@sicom.com"
+        "\nInclure le numero du restaurant, votre nom et votre # de cellulaire, ensuite le support vous contactera (en anglais)"
         "\n\n\n\n\n\n\n\n\n"
     </string>
     <string name="aidememoireMSC">
@@ -312,6 +322,27 @@
         "\n\n\n<b><u>Call out et fermeture</u></b>\n"
         "\nSur l’intranet de Progitech https://service.progitech.com/mobile/index.php"
         "\nou par téléphone avec Michel pour les appels Global ou Sabrina pour les autres."
+        "\n\n\n\n\n\n\n\n\n"
+    </string>
+    <string name="aidememoireRicoh">
+        "<b><u>Procédure pour appels Loblaw</u></b>\nSoirs et fin de semaines"
+        "\nPour les appels Global, il est important de prendre l’équipement indiqué sur le bon de travail Apple Express."
+        "\n\n\n<b><u>1.</u></b>\n"
+        "\nL’équipe Ricoh SDS s’occupe de placer les appels de services en appelant le technicien de garde sur le numéro de cellulaire suivant  1-819-440-8738 et après avoir parlé au technicien, l’équipe envoie l’appel de services par courriel à : dispatch1@bureautech.ca Ainsi, le ticket de l’appel est créé dans notre système ainsi que dans le système Loblaw."
+        "\n\n\n<b><u>2.</u></b>\n"
+        "\nLe technicien doit répondre le plus rapidement possible par courriel à partir de son ordinateur chez lui avec team viewer ou à partir du poste du dispatch au bureau mais jamais à partir de son cellulaire pour donner un update et ETA à l’adresse suivante : ricoh-sds@loblaw.ca"
+        "\n\n\n<b><u>3.</u></b>\n"
+        "\nLe technicien doit préparer son bon de travail Bureautech (ne pas oublier d’inclure un bavard pour inscrire le déplacement et les heures de travail sur le site). Par la suite, il doit se rendre chez le client et effectuer le travail demandé et/ou faire un constat sans pièces, même si tu penses qu’il te manque une pièce."
+        "\n\n\n<b><u>4.</u></b>\n"
+        "\nSi le technicien a de la difficulté avec son appel de services, il peut appeler le support technique de Ricoh : 1-800-922-4072 jusqu’à 21h00 mais pas le week-end et le service est en anglais seulement. Si pas de réponse, ça va au jour d’après et c’est le dispatch qui fera le suivi avec Ricoh ou le lundi dans le cas d’un call week-end."
+        "\n\n\n<b><u>5.</u></b>\n"
+        "\nAprès avoir effectué le travail, à son retour, le technicien doit toujours updater l’équipe Ricoh SDS par courriel à partir de son ordinateur chez lui avec team viewer ou à partir du poste du dispatch au bureau mais jamais à partir de son cellulaire à l’adresse suivante  ricoh-sds@loblaw.ca pour replanifier l’appel avec un suspend pièce(s) ou pour fermer l’appel."
+        "\n\n\n<b><u>6.</u></b>\n"
+        "\nSi le problème persiste et aucune solution n’est possible à ce moment, en aviser Tony Bastone et l’équipe Ricoh SDS le plus rapidement possible par courriel : tony.bastone@ricoh.ca et ajouter en cc. : ricoh-sds@loblaw.ca  et le lendemain matin, ou le lundi, faire un constat au dispatch qui prendra en charge le suivi de cet appel."
+        "\n\n\n<b><u>N.B. : À noter qu’il n’existe pas de programme pour laisser un « loaner » au client</u></b>\n"
+        "\n\n\n<b><u>Temps de déplacement à inscrire selon charte pour facturation à Ricoh</u></b>\n"
+        "\nMaxi Maniwaki = 2.5 heures"
+        "\nMaxi Mont-Tremblant = 3.5 heures"
         "\n\n\n\n\n\n\n\n\n"
     </string>
     <string name="action_settings">Settings</string>
